fix collapsed tab shifting when audio playing
Fixes #608 as tested in browser toolbox

--- a/src/browser/base/content/zen-styles/zen-tabs/vertical-tabs.css
+++ b/src/browser/base/content/zen-styles/zen-tabs/vertical-tabs.css
@@ -232,7 +232,7 @@
   }
   
   .tab-icon-overlay {
-    margin-inline-end: 0;
+    margin-inline-end: 0 !important;
     display: none; /* TODO: fix this */
   }
 
